modules/vpc/main.tf
resource "aws_vpc" "vpc" {
  cidr_block = "${var.vpc-cidr-block}"
  enable_dns_support = true
  enable_dns_hostnames = true
  tags {
    Name = "${var.envName}-vpc"
  }
}
